--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     tags:
-      - 'v*.*.*'    # trigger on version tags like v1.0.0
+      - 'v*.*.*'
   pull_request:
     branches:
       - main
@@ -19,35 +19,23 @@ jobs:
         php-version: [5.6, 7.4, 8.2]
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
+
+      - name: Validate PHP
+        run: php -v
+
+      - name: Validate Composer version
+        run: composer --version
+
       - name: Install dependencies
-        run: composer install
+        run: |
+          composer install --prefer-dist --no-interaction
+        env:
+          COMPOSER_MEMORY_LIMIT: -1
+
       - name: Run PHPUnit
         run: ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests
-
-  package:
-    name: Package Library
-    runs-on: ubuntu-latest
-    needs: test
-    if: startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-      - name: Install dependencies
-        run: composer install
-      - name: Build / Publish Package
-        run: |
-          # Here you can zip the package or publish to GitHub Packages
-          composer validate
-          composer package
-      - name: Upload Package as Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: account-validator
-          path: ./   # adjust if you want to zip specific folder
