--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,44 +1,59 @@
 stages:
   - test
-  - publish
-  - trigger-downstream
+  - package
 
 variables:
-  COMPOSER_HOME: "$CI_PROJECT_DIR/composer_home"
-  GITLAB_TOKEN: "${CI_JOB_TOKEN}"
+  COMPOSER_MEMORY_LIMIT: -1
 
-test_library:
-  stage: test
-  image: php:7.4-cli
-  script:
+# Matrix of PHP versions
+.test_template: &test_definition
+  image: php:$PHP_VERSION-cli
+  before_script:
     - apt-get update && apt-get install -y unzip git curl
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-    - composer install
+  script:
+    - composer install --prefer-dist --no-interaction
     - ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests
+
+test_php56:
+  <<: *test_definition
+  stage: test
+  variables:
+    PHP_VERSION: "5.6"
   tags:
     - docker
 
-publish_library:
-  stage: publish
-  only:
-    - tags
+test_php74:
+  <<: *test_definition
+  stage: test
+  variables:
+    PHP_VERSION: "7.4"
+  tags:
+    - docker
+
+test_php82:
+  <<: *test_definition
+  stage: test
+  variables:
+    PHP_VERSION: "8.2"
+  tags:
+    - docker
+
+package_library:
+  stage: package
   image: php:7.4-cli
-  before_script:
-    - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-    - composer config --global --auth gitlab-token.gitlab.yourdomain.com $GITLAB_TOKEN
-  script:
-    - composer validate
-    - composer publish --repository-url https://gitlab.yourdomain.com/api/v4/group/YOUR-GROUP/-/packages/composer packages.json
-  tags:
-    - docker
-
-trigger_downstream:
-  stage: trigger-downstream
   only:
-    - tags
+    - tags  # Only package on version tags like v1.0.0
+  before_script:
+    - apt-get update && apt-get install -y unzip git curl
+    - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
   script:
-    - curl -X POST -F token=SYSTEM1_TRIGGER_TOKEN -F ref=main https://gitlab.yourdomain.com/group/system1/-/trigger/pipeline
-    - curl -X POST -F token=SYSTEM2_TRIGGER_TOKEN -F ref=main https://gitlab.yourdomain.com/group/system2/-/trigger/pipeline
-    - curl -X POST -F token=SYSTEM3_TRIGGER_TOKEN -F ref=main https://gitlab.yourdomain.com/group/system3/-/trigger/pipeline
+    - composer install --prefer-dist --no-interaction
+    - composer validate
+    - zip -r account-validator-${CI_COMMIT_TAG}.zip src tests composer.json README.md
+  artifacts:
+    paths:
+      - account-validator-${CI_COMMIT_TAG}.zip
+    expire_in: 1 week
   tags:
     - docker
