--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "php": ">=5.6 <=8.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0"
+    "phpunit/phpunit": "^5.7 || ^6.5 || ^7.5 || ^8.5 || ^9.5 || ^10.0"
   },
   "autoload": {
     "psr-4": {
