--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -29,3 +29,43 @@ jobs:
         run: php -v
 
       - name: Validate Composer version
+        run: composer --version
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-interaction
+        env:
+          COMPOSER_MEMORY_LIMIT: -1
+
+      - name: Run PHPUnit
+        run: ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests
+
+  package_library:
+    name: Package Library
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-interaction
+        env:
+          COMPOSER_MEMORY_LIMIT: -1
+
+      - name: Validate composer.json
+        run: composer validate
+
+      - name: Package Library
+        run: |
+          zip -r account-validator-${GITHUB_REF_NAME}.zip src tests composer.json README.md
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: account-validator-${GITHUB_REF_NAME}
+          path: account-validator-${GITHUB_REF_NAME}.zip
